# jail

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  GameClass.h  Makefile  README.md  Readme.md  build.sh  compile_commands.json  inventory.h  jail  jail.cppcheck
.cache/clangd/index/: Error.cpp.CE01B8D9FB059E8C.idx  GameClass.cpp.7ADBE816E0B07463.idx  GameClass.h.C3C00787320FC455.idx  main.cpp.A724F07E77181FA8.idx
.github/workflows/: c-cpp.yml
JailEngine/: CMakeLists.txt
JailEngine/include/: Camera2D.h  Errors.h  GLSLShader.h  IO_Manager.h  Image_Loader.h  Jail.h  PicoPNG.h  Resource.h  Sprite.h  SpriteBatch.h  Texture.h  TextureCache.h  Vertex.h  Window.h  texture.h
JailEngine/src/: Camera2D.cpp  Errors.cpp  GLSLShader.cpp  IOManager.cpp  ImageLoader.cpp  Jail.cpp  PicoPNG.cpp  Resource.cpp  Sprite.cpp  SpriteBatch.cpp  TextureCache.cpp  Window.cpp  errors.cpp  imageloader.cpp  resource.cpp  sprite.cpp
engine/include/: sprite.h
engine/src/: GLSLShader.cpp  ioman.cpp  picopng.cpp
include/: .1.4  Errors.h  GLSLShader.h  GameClass.h  Gameclass.h  IO_Manager.h  PicoPNG.h  Resource.h  Sprite.h  TextureCache.h  Vertex.h  actor.h  errors.h  settings.h  sprite.h  texture.h
shaders/: colorShading.frag  colorShading.vert
src/: Errors.cpp  GLSLShader.cpp  GameClass.cpp  Sprite.cpp  errors.cpp  imageloader.cpp  ioman.cpp  main.cpp  sprite.cpp
textures/: License.txt
